--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,7 +59,7 @@ nav{
     background-color: var(--cor2);
     padding: 10px;
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.541);
-    
+    max-width: 100wp;
 }
 
 nav > a{
@@ -73,6 +73,7 @@ nav >a:hover{
     box-shadow: inset 0px 7px 9px rgba(0, 0, 0, 0.514);
     border-radius: 5px;
     transition-duration: .5s;
+    box-sizing: content-box;
 }
 
 /*conteudo*/
